@startuml

class MesaGraphics <<(A, red)>>
MesaGraphics : _view_thread_loop()
MesaGraphics : _worker_thread_loop()

class View
View : screen
View : components: Callables
View : add_UIElement(Type, args)
View : draw()

class Controller
Controller : update()

Controller -> View
Controller -> Model
View --> Model

MesaGraphics --> View
MesaGraphics --> Controller
MesaGraphics --> Model

/' ########## Controller part ########## '/

class InputHandler
InputHandler : update()
InputHandler : get_pressed(key)
InputHandler : get_holding(key)
InputHandler : get_released(key)

Controller --> InputHandler

class ButtonsController
ButtonsController : actions
ButtonsController : update(Button)
Controller --> ButtonsController
View <-- ButtonsController
Model <-- ButtonsController
ButtonsController --> InputHandler


class UserParamController
UserParamController : update(UserParam)
Controller --> UserParamController
View <-- UserParamController
Model <-- UserParamController
UserParamController --> InputHandler

/' ########## Model part ########## '/

class Model
Model : Model de l'utilisateur
Model : update()

/' ##########  View part ########## '/


class ComponentsView
View -> ComponentsView

class UserParamView
View -> UserParamView

class UIElement
UIElement : position
UIElement : draw(screen)
View --> UIElement

class Rectangle
UIElement <|-- Rectangle
Rectangle : size
Rectangle : color

class Text
Text : image
Text : set_pos(position)
UIElement <|-- Text

class Button
Button : font
Button : size
Button : hover
Button : name
Button : modify_text(new_text)
Button : set_pos(new_pos)
UIElement <|-- Button
Button --> Text

class UserParam
UserParam : value
UIElement <|-- UserParam

class Slider
Slider : length
Slider : selectedPosX
Slider : min/max
Slider : step
Slider : hover
Slider : type
Slider : set_value(value)
UserParam <|-- Slider

class Checkbox
UserParam <|-- Checkbox


class components <<(A, red)>>
components : create_space_component(Renderer, page)
components : make_mpl_plot_component(measure, post_process, page)
components : make_plot_component(measure, post_process, page)

@enduml